--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, Achilles</a></li>
       <li><a class="active" href="#">Home</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/calendar.html">Calendar</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/login.html">Login</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/calendar.html">Calendar</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/login.html">Login</a></li>
     </ul>
   </nav>
   <section></section>
