--- a/demo/calendar.html
+++ b/demo/calendar.html
@@ -18,9 +18,9 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, Achilles</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/index.html">Home</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/">Home</a></li>
       <li><a class="active" href="#">Calendar</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/login.html">Login</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/login.html">Login</a></li>
     </ul>
   </nav>
   <section></section>
