--- a/demo/login.html
+++ b/demo/login.html
@@ -20,8 +20,8 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, Achilles</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/index.html">Home</a></li>
-      <li><a href="file:///home/halfwayorpheus/Documents/particleTest/particles.js/demo/calendar.html">Calendar</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/">Home</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/calendar.html">Calendar</a></li>
       <li><a class="active" href="#">Login</a></li>
     </ul>
   </nav>
