--- a/calendar.html
+++ b/calendar.html
@@ -6,10 +6,8 @@
   <title>particles.js</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="style.css">
+  <link rel="stylesheet" media="screen" href="index.css">
 </head>
-
-
 
 <body>
   <nav>
@@ -20,9 +18,9 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, Achilles</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/">Home</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/calendar.html">Calendar</a></li>
-      <li><a class="active" href="#">Login</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/home.html">Home</a></li>   <!-- Home -->
+      <li><a class="active" href="#">Calendar</a></li>                                                   <!-- Calendar -->
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/index.html">Logout</a></li> <!-- Login -->
     </ul>
   </nav>
   <section></section>
