--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
+<!-- This will be the Login page-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>particles.js</title>
+  <title>Attendance</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="style.css">
+  <link rel="stylesheet" media="screen" href="index.css">
 </head>
-
-<body>
-
-</body>
 
 <body>
   <nav>
@@ -21,10 +19,10 @@
     </label>
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
-      <li><b style="font-size:12px">Welcome, Achilles</a></li>
+      <li><b style="font-size:12px">Welcome</a></li>
       <li><a class="active" href="#">Home</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/calendar.html">Calendar</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/login.html">Login</a></li>
+      
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/login.html">Login</a></li>
     </ul>
   </nav>
   <section></section>
