--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <title>particles.js</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="style.css">
+  <link rel="stylesheet" media="screen" href="index.css">
 </head>
 
 <body>
@@ -17,10 +17,7 @@
     </label>
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
-      <li><b style="font-size:12px">Welcome, Achilles</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/">Home</a></li>
-      <li><a class="active" href="#">Calendar</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/demo/login.html">Login</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/index.html">Home</a></li>
     </ul>
   </nav>
   <section></section>
@@ -28,7 +25,7 @@
   <div id="particles-js"></div>
 
   <!-- scripts -->
-  <script src="../particles.js"></script>
+  <script src="particles.js"></script>
   <script src="app.js"></script>
 
   <!-- stats.js -->
