--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- scripts -->
   <script src="../particles.js"></script>
-  <script src="demo/app.js"></script>
+  <script src="app.js"></script>
 
   <!-- stats.js -->
   <script src="js/lib/stats.js"></script>
