--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- This will be the Login page-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,7 +28,7 @@
   <div id="particles-js"></div>
 
   <!-- scripts -->
-  <script src="../particles.js"></script>
+  <script src="particles.js"></script>
   <script src="app.js"></script>
 
   <!-- stats.js -->
