add this version

--- a/classList.html
+++ b/classList.html
@@ -17,9 +17,9 @@
     </label>
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
-      <li><a class="active" href="#">Home</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/home.html">Home</a></li>
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/calendar.html">Calendar</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/classList.html">Class List</a></li>
+      <li><a class="active" href="#">Class List</a></li>
     </ul>
   </nav>
   <section></section>
