--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>particles.js</title>
+  <title>Login</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="index.css">
@@ -18,38 +18,85 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/home.html">Home</a></li>
+
     </ul>
   </nav>
   <section></section>
-  <!-- particles.js container -->
-  <div id="particles-js"></div>
+
+
+  <style>
+    nav {
+      position:sticky;
+
+    }
+    .myForm {
+      font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+      font-size: 0.8em;
+      position: fixed; /* or absolute */
+      top: 50%;
+      left: 33%;
+    }
+  
+    .myForm label {
+      color: white;
+      padding: 0.5;
+      font-weight: bold;
+    }
+  
+    .myForm input {
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+      font-size: 0.9em;
+      padding: 0.3em;
+    }
+  
+    .myForm input[type="email"],
+    .myForm input[type="password"] {
+      width: 10em;
+      height: 1.75em;
+    }
+  
+    .myForm button {
+      padding: 0.7em;
+      border-radius: 0.5em;
+      background: #fff;
+      border: none;
+      font-weight: bold;
+    }
+  
+    .myForm button:hover {
+      background: #fff;
+      cursor: pointer;
+    }
+
+  </style>
+
+<div id="particles-js">
+  <form class="myForm" method="get" action="/html/codes/html_form_handler.cfm">
+    <p>
+      <label>Email
+        <input type="email" name="user_email" required>
+      </label>
+      <label>Password 
+        <input type="password" name="user_pwd" required>
+      </label>
+      <button>Log In</button>
+    </p>
+    <p>
+      <label>
+        <input type="checkbox"> Remember me
+      </label>
+    </p>
+  </form>
+</div>
 
   <!-- scripts -->
   <script src="particles.js"></script>
   <script src="app.js"></script>
 
-  <!-- stats.js -->
-  <script src="js/lib/stats.js"></script>
-  <script>
-    var count_particles, stats, update;
-    stats = new Stats;
-    stats.setMode(0);
-    stats.domElement.style.position = 'absolute';
-    stats.domElement.style.left = '0px';
-    stats.domElement.style.top = '0px';
-    document.body.appendChild(stats.domElement);
-    count_particles = document.querySelector('.js-count-particles');
-    update = function () {
-      stats.begin();
-      stats.end();
-      if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
-        count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
-      }
-      requestAnimationFrame(update);
-    };
-    requestAnimationFrame(update);
-  </script>
-
+  
 </body>
+
 
 </html>
