home html page changes

--- a/classList.html
+++ b/classList.html
@@ -52,6 +52,15 @@
     requestAnimationFrame(update);
   </script>
 
+<table>
+  <tr>
+      <th> Name </th>
+      <th> Time </th>
+      <th> Status <th>
+  </tr>
+
+</table>
+
 </body>
 
 </html>
