--- a/classList.html
+++ b/classList.html
@@ -25,7 +25,7 @@
   <section></section>
   <!-- particles.js container -->
   <div id="particles-js">
-    <script src= "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
+    <script src= "https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
     <script>
   
       $(function() {
