Moved nav bar to top in home.html

--- a/classList.html
+++ b/classList.html
@@ -55,7 +55,7 @@
   </script>
   
         <h1 id = "title"> Class List and Times</h1>
-        <p> Attendance data </p>
+        <p> Attendance Data </p>
         <h2 id="display" style="background-color:#ffffffc9;"></h2>
   
         <table id= "userdata" border="2">
