--- a/home.html
+++ b/home.html
@@ -13,10 +13,10 @@
 <body>
 
   <style>
-    nav {
+    /*nav {
       position:sticky;
 
-    }
+    }*/
     .myForm {
       font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
       font-size: 0.8em;
@@ -60,9 +60,7 @@
 
   </style>
   
-  <div id="particles-js">
-
-  </div>
+  
 
 
 
