--- a/classList.html
+++ b/classList.html
@@ -16,18 +16,21 @@
         <i class="fas fa-bars"></i>
     </label>
     <ul>
-      <li><a href="#">Class List</a></li>   <!-- Class List -->
+      <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/calendar.html">Calendar</a></li>
+      <li><a href="#">Class List</a></li>   <!-- Class List -->
+
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/index.html">Logout</a></li>
     </ul>
   </nav>
-  <c><label style="font-size:80px">Attendance - inator</c>
   <section></section>
 
 
   
   <!-- particles.js container -->
   <div id="particles-js">
+    <h1 id = "title">Class List</h1>
+    <p> Attendance Data </p>
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"> </script>
     <script>
   
@@ -56,13 +59,12 @@
 });
   
   </script>
-  
-        <h1 id = "title"> Class List and Times</h1>
-        <p> Attendance Data </p>
         <h2 id="display" style="background-color:#ffffffc9;"></h2>
   
         <table id= "userdata" border="2">
+
           <thead>
+
             <th>Students attended today</th>
             <th>Time of Arrival</th>
                 </thead>
