--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <h1> Welcome to the Attendance-inator Portal </h1>
+  <h2> Log in to get started </h2>
   <nav>
     <input type="checkbox" id="check">
     <label for="check" class="check-btn">
@@ -18,12 +20,43 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, student</a></li>
-      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/login.html">Login</a></li>
+      <li><a href="http://127.0.0.1:5500/login.html">Login</a></li>
     </ul>
   </nav>
   <section></section>
   <!-- particles.js container -->
   <div id="particles-js"></div>
+
+  <style>
+    h1{
+      font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+      font-size: 3.9em;
+      line-height: 0%;
+      position: static;
+      background-color: white;
+      position: absolute;
+      left: 13%;
+      top: 48%;
+    }
+    h2{
+      font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+      font-size: 3.9em;
+      line-height: 0%;
+      position: static;
+      color:white;
+      position: absolute;
+      left: 33%;
+      top: 68%;
+    }
+
+    .imgcss{
+      display: block;
+      background-color: white;
+      height: 300px;
+      width: 300px;
+    }
+
+  </style>
 
   <!-- scripts -->
   <script src="particles.js"></script>
@@ -50,6 +83,7 @@
     };
     requestAnimationFrame(update);
   </script>
+  <img src = "UDlogo.png" alt = "UD Logo" class = "imgcss">
 
 </body>
 
