--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </label>
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
-      <li><b style="font-size:12px">Welcome, student</a></li>
+      <li><b style="font-size:12px">Welcome, professor</a></li>
       <li><a href="http://127.0.0.1:5500/login.html">Login</a></li>
     </ul>
   </nav>
