--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>particles.js</title>
+  <title>Calendar</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="index.css">
@@ -11,6 +11,8 @@
 
 <body>
   <nav>
+    <img src="UDLogo.png" alt="UD Logo" width="80" height="79">
+    <img src="UDText.png" alt="UD Text" width="270" height="79">
     <input type="checkbox" id="check">
     <label for="check" class="check-btn">
         <i class="fas fa-bars"></i>
