--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Attendance</title>
+  <title>Home</title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="index.css">
@@ -11,13 +11,14 @@
 
 <body>
   <nav>
+    <img src="UDLogo.png" alt="UD Logo" width="80" height="79">
+    <img src="UDText.png" alt="UD Text" width="270" height="79">
     <input type="checkbox" id="check">
     <label for="check" class="check-btn">
         <i class="fas fa-bars"></i>
     </label>
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
-      <li><b style="font-size:12px">Welcome, student</a></li>
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/login.html">Login</a></li>
     </ul>
   </nav>
