--- a/login.html
+++ b/login.html
@@ -11,6 +11,8 @@
 
 <body>
   <nav>
+    <img src="UDLogo.png" alt="UD Logo" width="80" height="79">
+    <img src="UDText.png" alt="UD Text" width="270" height="79">
     <input type="checkbox" id="check">
     <label for="check" class="check-btn">
         <i class="fas fa-bars"></i>
@@ -18,7 +20,7 @@
   <ul>
     <li><b style="font-size:30px">Attendance - inator</a></li>
   </ul>
-    <ul align="left">
+    <ul>
       <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/index.html">Back</a></li>
     </ul>
   </nav>
@@ -79,7 +81,7 @@
       <label>Email
         <input type="email" name="user_email" required>
       </label>
-      <label>Password 
+      <label>Password
         <input type="password" name="user_pwd" required>
       </label>
       <button>Log In</button>
