--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <li><a href="http://127.0.0.1:5500/login.html">Login</a></li>
     </ul>
   </nav>
+  <img src = "UDLogo.png" alt = "UD Logo" class = "imgcss">
+  <img src = "UDpeople.jpeg" alt = "UD Logo" class = "imgcss1">
   <section></section>
   <!-- particles.js container -->
   <div id="particles-js"></div>
@@ -52,10 +54,22 @@
     }
 
     .imgcss{
-      display: block;
       background-color: white;
-      height: 300px;
+      height: 200px;
+      width: 200px;
+      display:block;
+      position:absolute;
+      top:60%;
+      left:10%;
+    }
+    .imgcss1{
+      background-color: white;
+      height: 200px;
       width: 300px;
+      display:block;
+      position:absolute;
+      top:60%;
+      left:75%;
     }
 
   </style>
