--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <ul>
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><b style="font-size:12px">Welcome, professor</a></li>
-      <li><a href="http://127.0.0.1:5500/login.html">Login</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/login.html">Login</a></li>
     </ul>
   </nav>
-  <img src = "UDLogo.png" alt = "UD Logo" class = "imgcss">
-  <img src = "UDpeople.jpeg" alt = "UD Logo" class = "imgcss1">
   <section></section>
   <!-- particles.js container -->
   <div id="particles-js"></div>
@@ -99,7 +97,7 @@
     };
     requestAnimationFrame(update);
   </script>
-  <img src = "UDlogo.png" alt = "UD Logo" class = "imgcss">
+
 
 </body>
 
