--- a/classList.html
+++ b/classList.html
@@ -21,7 +21,7 @@
       <li><b style="font-size:30px">Attendance - inator</a></li>
       <li><a href="#">Class List</a></li>   <!-- Class List -->
 
-      <li><a href="http://127.0.0.1:5500/index.html">Logout</a></li>
+      <li><a href="https://uofdcomputerscience.github.io/softwareFrontEnd2023/index.html">Logout</a></li>
     </ul>
   </nav>
   <section></section>
