--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
       </label>
     </p>
   </form>
-  <a href = "http://127.0.0.1:5500/classList.html">
+  <a href = "https://uofdcomputerscience.github.io/softwareFrontEnd2023/classList.html">
       <button class = "login" ><b>Log in</b></button>
   </a>
 </div>
